--- a/Twitter/twitter_clean.ipynb
+++ b/Twitter/twitter_clean.ipynb
@@ -158,10 +158,17 @@
    "outputs": [],
    "source": [
     "class Transform():\n",
+    "    '''\n",
+    "    A class that reads data from database, perform all needed preprocessing \n",
+    "    and return a DataFrame ready for analysis\n",
+    "    '''\n",
     "    def __init__(self):\n",
     "        self.data = None\n",
     "    \n",
     "    def get_twitter_df(self, ids, twitter_col:list):\n",
+    "        '''\n",
+    "        This function get the required data from the Twitter table in the database and places it in a Dataframe\n",
+    "        '''\n",
     "        data = []\n",
     "        for i in range(len(ids)):\n",
     "            a,b,c,d,e,f = ids[i].tweet_id, ids[i].asa_id, ids[i].user_id, ids[i].text, ids[i].posted_at, ids[i].hashtags\n",
@@ -172,6 +179,9 @@
     "        return df\n",
     "    \n",
     "    def get_inter_df(self, ids, inter_col:list):\n",
+    "        '''\n",
+    "        This function get the required data from the Interactions table in the database and places it in a Dataframe\n",
+    "        '''\n",
     "        data = []\n",
     "        for i in range(len(ids)):\n",
     "            a,b,c,d = ids[i].tweet_id, ids[i].likes, ids[i].retweets, ids[i].protected\n",
@@ -182,6 +192,9 @@
     "        return df\n",
     "\n",
     "    def get_hist_df(self, ids, twitter_col:list):\n",
+    "        '''\n",
+    "        This function get the required data from the Historical table in the database and places it in a Dataframe\n",
+    "        '''\n",
     "        data = []\n",
     "        for i in range(len(ids)):\n",
     "            a,b,c,d,e,f,g,h,i = ids[i].id, ids[i].date, ids[i].user_id, ids[i].text, \\\n",
@@ -193,11 +206,17 @@
     "        return df\n",
     "    \n",
     "    def merge_dfs(self, df1, df2):\n",
+    "        '''\n",
+    "        This function merges the twitter table and interaction table data\n",
+    "        '''\n",
     "        df = pd.merge(df1, df2, how = 'inner', on = 'tweet_id')\n",
     "        \n",
     "        return df\n",
     "    \n",
     "    def clean_tweet(self, tweet):\n",
+    "        '''\n",
+    "        This function performs all necessary cleaning on the text data\n",
+    "        '''\n",
     "        tweet = normalize('NFKD', tweet).encode('ascii', 'ignore').decode('utf-8')\n",
     "        tweet = str(tweet)\n",
     "        tweet = re.sub('(RT\\s(@\\w+))', '', tweet)\n",
@@ -211,6 +230,10 @@
     "        return tweet\n",
     "    \n",
     "    def clean_id(self,df, column, historical = False):\n",
+    "        '''\n",
+    "        This functions cleans the ID column for '{}' or '[]'\n",
+    "        '''\n",
+    "        \n",
     "        new = []\n",
     "        for s in df[column]:\n",
     "            s = s.lower()\n",
@@ -226,6 +249,9 @@
     "        return df\n",
     "    \n",
     "    def fix_type(self, df):\n",
+    "        '''\n",
+    "        This function converts the likes, retweets and protected columns to int64, int64 and bool respectively\n",
+    "        '''\n",
     "#         data = self.data\n",
     "        for i in df.columns:\n",
     "            if i in ['likes', 'retweets']:\n",
@@ -236,6 +262,9 @@
     "        return df\n",
     "    \n",
     "    def choose_asa(self, df):\n",
+    "        '''\n",
+    "        This function extracts the needed ASA from the dataframe for analysis\n",
+    "        '''\n",
     "#         data = self.data\n",
     "        asa = input(\"Hey there! \\nWhat ASA would you like to analyze? \").lower()\n",
     "        data_asa = df[df['asa_id'].str.contains(asa, case = False)]\n",
@@ -243,6 +272,9 @@
     "        return data_asa\n",
     "    \n",
     "    def alll(self, historical = False):\n",
+    "        '''\n",
+    "        This functions call all methods in the transform class in order and produce the final df for analytics\n",
+    "        '''\n",
     "        col_t = ['tweet_id', 'asa_id', 'user_id', 'text', 'posted_at', 'hashtags']\n",
     "        col_i = ['tweet_id', 'likes', 'retweets', 'protected']\n",
     "        col_hist = ['id', 'date', 'user_id', 'text', 'retweets', 'likes', 'metionedusers', 'asa_id', 'protected']\n",
@@ -403,6 +435,10 @@
     "        self.compare_with = compare_with\n",
     "    \n",
     "    def day_of_week(self):\n",
+    "        '''\n",
+    "        This function extracts the day of the week from the datatime \n",
+    "        column of the dataframe and adds it to the column\n",
+    "        '''\n",
     "        data = self.data\n",
     "        date = self.datetime_col\n",
     "        day = date.dt.weekday\n",
@@ -414,6 +450,10 @@
     "\n",
     "        return data\n",
     "    def hour_of_day(self):\n",
+    "        '''\n",
+    "        This function extracts the hour of the day from the datatime \n",
+    "        column of the dataframe and adds it to the column\n",
+    "        '''\n",
     "        data = self.data\n",
     "        date = self.datetime_col\n",
     "        time = date.dt.hour\n",
@@ -421,6 +461,14 @@
     "        return data\n",
     "    \n",
     "    def plot_line(self, c, xlab, ylab, title):\n",
+    "        '''\n",
+    "        Function to plot line graph\n",
+    "        \n",
+    "        c: Series or List\n",
+    "        xlab: str\n",
+    "        ylab: str\n",
+    "        title: str\n",
+    "        '''\n",
     "        plt.style.use('fivethirtyeight')\n",
     "        plt.figure(figsize=(12,4))\n",
     "        plt.title(title)\n",
@@ -432,6 +480,15 @@
     "        \n",
     "        \n",
     "    def plot_bar(self, x, y, xlab, ylab, title):\n",
+    "        '''\n",
+    "        Function to plot bar chart\n",
+    "        \n",
+    "        x: Series or List\n",
+    "        y: Series or List\n",
+    "        xlab: str\n",
+    "        ylab: str\n",
+    "        title: str\n",
+    "        '''\n",
     "        \n",
     "        plt.style.use('fivethirtyeight')\n",
     "        plt.figure(figsize=(12,4))\n",
@@ -442,6 +499,13 @@
     "                       path_effects.Normal()])\n",
     "#         plt.show()\n",
     "    def compare_bar(self, x, y1, y2):\n",
+    "        '''\n",
+    "        Function to plot multiple bar chart; compare two entities\n",
+    "        \n",
+    "        x: List\n",
+    "        y1: Pandas Series\n",
+    "        y2: Pandas Series\n",
+    "        '''\n",
     "        data = self.data\n",
     "        entity1 = self.entity_col\n",
     "        entity2 = self.compare_with\n",
@@ -467,6 +531,13 @@
     "        \n",
     "        \n",
     "    def compare_line(self, c1, c2):\n",
+    "        '''\n",
+    "        Function to plot two line graph on the same grid; compare two entities\n",
+    "        \n",
+    "        c1: Pandas Series\n",
+    "        c2: Pandas Series\n",
+    "        '''\n",
+    "        \n",
     "        data = self.data\n",
     "        entity1 = self.entity_col\n",
     "        entity2 = self.compare_with\n",
@@ -486,6 +557,13 @@
     "        \n",
     "    def group(self, df, time_var:str, interest_var:str, custom = False):\n",
     "        \n",
+    "        '''\n",
+    "        Function to group by time_var and get sum of interest_var per time_var:\n",
+    "        \n",
+    "        time_var: a categorical variable\n",
+    "        interest_var: numeric\n",
+    "        '''\n",
+    "        \n",
     "        custom_index = ['Sunday', 'Monday', 'Tuesday',\\\n",
     "                        'Wednesday','Thursday', 'Friday', 'Saturday']\n",
     "        h = df.groupby(time_var)[interest_var].sum()\n",
@@ -501,6 +579,12 @@
     "        \n",
     "        \n",
     "    def plot(self, weekday = False, timeofday = False):\n",
+    "        '''\n",
+    "        Function to initial different plot based on specified condition\n",
+    "        \n",
+    "        weekday: bool\n",
+    "        timeofday: bool\n",
+    "        '''\n",
     "        data = self.data\n",
     "        entity = self.entity_col\n",
     "        entity2 = self.compare_with\n",
@@ -560,6 +644,12 @@
    "outputs": [],
    "source": [
     "class Text():\n",
+    "    '''\n",
+    "    THis class takes care of all text-based analytics\n",
+    "    \n",
+    "    wordcloud\n",
+    "    sentiment\n",
+    "    '''\n",
     "    \n",
     "    def __init__(self, df, column:str):\n",
     "        self.df = df\n",
@@ -567,6 +657,9 @@
     "        self.text = df[column]\n",
     "        \n",
     "    def wordcloud(self):\n",
+    "        '''\n",
+    "        Function to plot wordcloud for text data\n",
+    "        '''\n",
     "        text = self.text\n",
     "        \n",
     "        comment_words = ''\n",
@@ -602,6 +695,9 @@
     "        return plt.show()\n",
     "        \n",
     "    def sentiment(self):\n",
+    "        '''\n",
+    "        Function to get sentiment score for text data\n",
+    "        '''\n",
     "        df = self.df\n",
     "        column = self.df\n",
     "        text = self.text\n",
@@ -617,6 +713,9 @@
     "        df['sentiment_score'] = senti\n",
     "        return df\n",
     "    def plot_sentiment(self):\n",
+    "        '''\n",
+    "        Function to plot sentiment category on a bar chart\n",
+    "        '''\n",
     "        df = self.sentiment()\n",
     "        \n",
     "        code = {1: 'positive', -1: 'negative', 0:'neutral'}\n",
